--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mailto: ^2.0.0
+  url_launcher: ^6.0.6
 
 
   # The following adds the Cupertino Icons font to your application.
